--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar-container">
         <div class="logo-png">
-            <img src="image.png" alt="">
+            <img src="images/image.png" alt="">
         </div>
         <div class="menu-item">
             <ul class="list-item">
@@ -59,7 +59,8 @@
                 <h3>Business Law</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
             <div class="card">
@@ -67,7 +68,8 @@
                 <h3>Criminal Law</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
             <div class="card">
@@ -75,7 +77,8 @@
                 <h3>Child Support</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
             <div class="card">
@@ -83,7 +86,8 @@
                 <h3>Education Law</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
             <div class="card">
@@ -91,7 +95,8 @@
                 <h3>Divorce Law</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
             <div class="card">
@@ -99,7 +104,8 @@
                 <h3>Tax Law</h3>
                 <p>There are many variations <br> of passages of <br>Lorem Ipsum available, but the majority have
                     <br>suffered
-                    alteration in some <br>form, by injected humour.</p>
+                    alteration in some <br>form, by injected humour.
+                </p>
                 <img class="dot" src="images/Frame.png" alt="">
             </div>
         </div>
@@ -116,7 +122,8 @@
             </div>
             <div class="paragrp-container">
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                    classical Latin <br> literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
+                    classical Latin <br> literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                    Latin
                     professor at Hampden <br>-Sydney College in Virginia, looked up one of the more obscure Latin words,
                     consectetur.</p>
             </div>
@@ -124,10 +131,106 @@
         </div>
         <div class="main-content">
             <h6>Frequently Asked Any Questions</h6>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered
+                alteration in some form, by injected humour.</p>
         </div>
     </main>
+    <div class="application-container">
+        <div class="heading-container">
+            <div class="card-1">
+                <h6>1.Are application fee waivers available? -</h6>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered
+                    alteration in some <br>form, by injected humour, . </p>
+            </div>
+            <div class="card-2">
+                <h6>1.Are application fee waivers available? +</h6>
+            </div>
+            <div class="card-3">
+                <h6>1.Are application fee waivers available? +</h6>
+            </div>
+            <div class="card-4">
+                <h6>1.Are application fee waivers available? +</h6>
+            </div>
 
+        </div>
+        <div class="application-logo">
+            <img src="images/faq.png" alt="">
+        </div>
+    </div>
+    <div class="main-container">
+        <h5>Contact With Us</h5>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have <br>suffered alteration
+            in some form, by injected humour.</p>
+
+    </div>
+    <div class="description-card-container">
+        <div class="card-section">
+            <div class="description-card">
+                <img src="images/location.png" alt="">
+                <h3>Address</h3>
+                <p>A108 Adam Street,
+                    New York, NY 535022</p>
+            </div>
+            <div class="description-card">
+                <img src="images/call.png" alt="">
+                <h3>Call Us</h3>
+                <p>+88 01750 00 00 00
+                    +88 01750 00 00 00</p>
+            </div>
+            <div class="description-card">
+                <img src="images/email.png" alt="">
+                <h3>Email Us</h3>
+                <p>nfo@gmail.com
+                    info@gmail.com</p>
+            </div>
+            <div class="description-card">
+                <img src="images/time.png" alt="">
+                <h3>Working Hours</h3>
+                <p>Mon-Fri: 9AM to 5PM
+                    Sunday: 9AM to 1 PM</p>
+            </div>
+        </div>
+        <div class="input-section">
+            <input type="text" placeholder="Your Name">
+            <input type="email" name="" id="" placeholder="Your Email">
+            <input type="text" placeholder="subject">
+            <input class="text-box" type="text" placeholder="your message">
+            <button class="input-btn">Send Message</button>
+        </div>
+    </div>
+    <footer class="footer-container">
+        <div class="footer-logo">
+            <img src="images/logo.png" alt="">
+            <p>There are many variations of <br>passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration
+                in some <br>form, by injected humour.</p>
+
+        </div>
+        <div class="footer-menu">
+            <h3>Usefull Link</h3>
+            <br>
+            <p>Homes <br> <br> 
+                About Us <br> <br>
+                Cases <br> <br>
+                Blog <br> <br>
+                Contact Us</p>
+        </div>
+        <div class="footer-numbar">
+            <h3>Contact Now</h3> <br>
+            <p>555 4th 5t NW, Washington <br>
+                DC 20530, United States</p>
+            <p>+88 01750 000 000 <br>
+                +88 01750 000 000</p>
+            <p>+88 01750 000 000 <br>
+                +88 01750 000 000</p>
+        </div>
+        <div class="footer-input">
+            <h3>Subscribe</h3> <br>
+            <p>Subscribe for our latest &  <br>Articles. We Won’t Give You <br> Spam Mails</p> <br>
+            <input type="email" name="" id="" placeholder="your Email">
+        </div>
+
+
+    </footer>
 </body>
 
 </html>
